# GPT-tg-bot

./: .env.example  .gitignore  pyproject.toml
db/: database.db
gpt_telegram_bot/: bot.py
